// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createTestKeystore should match snapshot 1`] = `
Keystore {
  "keys": [
    {
      "algorithms": [
        "ES512",
      ],
      "created": 2020-01-01T08:00:00.000Z,
      "expiresAt": 2029-01-01T08:00:00.000Z,
      "id": "7531da89-12e9-403e-925a-5da49100635c",
      "isExternal": false,
      "namedCurve": "P-521",
      "notBefore": 2020-01-01T08:00:00.000Z,
      "operations": [
        "sign",
        "verify",
      ],
      "originUri": "https://example.com",
      "ownerId": "783f4859-562e-41e5-9c81-a392c12344c0",
      "passphrase": null,
      "preferredAlgorithm": "ES512",
      "privateKey": "-----BEGIN PRIVATE KEY-----
MIHuAgEAMBAGByqGSM49AgEGBSuBBAAjBIHWMIHTAgEBBEIBGma7xGZpaAngFXf3
mJF3IxZfDpI+6wU564K+eehxX104v6dZetjSfMx0rvsYX/s6cO2P3GE7R95VxWEk
+f4EX0qhgYkDgYYABAB8cBfDwCi41G4kVW4V3Y86nIMMCypYzfO8gYjpS091lxkM
goTRS3LM1p65KQfwBolrWIdVrbbOILASf06fQsHw5gEt4snVuMBO+LS6pesX9vA8
QT1LjX75Xq2InnLY1VToeNmxkuM+oDZgqHOYwzfUhu+zZaA5AuEkqPi47TA9iCSY
VQ==
-----END PRIVATE KEY-----
",
      "publicKey": "-----BEGIN PUBLIC KEY-----
MIGbMBAGByqGSM49AgEGBSuBBAAjA4GGAAQAfHAXw8AouNRuJFVuFd2POpyDDAsq
WM3zvIGI6UtPdZcZDIKE0UtyzNaeuSkH8AaJa1iHVa22ziCwEn9On0LB8OYBLeLJ
1bjATvi0uqXrF/bwPEE9S41++V6tiJ5y2NVU6HjZsZLjPqA2YKhzmMM31Ibvs2Wg
OQLhJKj4uO0wPYgkmFU=
-----END PUBLIC KEY-----
",
      "revision": 0,
      "type": "EC",
      "updated": 2021-01-01T10:00:00.000Z,
      "version": 0,
    },
    {
      "algorithms": [
        "HS512",
      ],
      "created": 2020-01-01T07:00:00.000Z,
      "expiresAt": 2029-01-01T08:00:00.000Z,
      "id": "aa08b86a-3550-4893-8021-9a18efcd1532",
      "isExternal": false,
      "namedCurve": null,
      "notBefore": 2020-01-01T07:00:00.000Z,
      "operations": [
        "sign",
        "verify",
      ],
      "originUri": "https://example.com",
      "ownerId": "6e0e4a96-8bf6-46ab-90f4-17c3c3abf174",
      "passphrase": null,
      "preferredAlgorithm": "HS512",
      "privateKey": "w(Hr~(~DwknfWryBEsAmJwO0*5Urs_10vsL2dllJdTVc.C3j_fF36a-Xsji.8g*)w(9j0C-2rlp2fCXsK1fxA_).*6NG70vloV3h)*do0!T44PB7099S21y7~2--h5)~",
      "publicKey": "w(Hr~(~DwknfWryBEsAmJwO0*5Urs_10vsL2dllJdTVc.C3j_fF36a-Xsji.8g*)w(9j0C-2rlp2fCXsK1fxA_).*6NG70vloV3h)*do0!T44PB7099S21y7~2--h5)~",
      "revision": 0,
      "type": "HS",
      "updated": 2021-01-01T10:00:00.000Z,
      "version": 0,
    },
    {
      "algorithms": [
        "RS256",
        "RS384",
        "RS512",
      ],
      "created": 2020-01-01T07:00:00.000Z,
      "expiresAt": 2029-01-01T08:00:00.000Z,
      "id": "e6301473-e347-4035-8084-8645d034e4a3",
      "isExternal": false,
      "namedCurve": null,
      "notBefore": 2020-01-01T07:00:00.000Z,
      "operations": [
        "decrypt",
        "encrypt",
        "sign",
        "verify",
      ],
      "originUri": "https://example.com",
      "ownerId": "ffe189e0-c82e-42d1-84ea-1bf4d4d07117",
      "passphrase": null,
      "preferredAlgorithm": "RS512",
      "privateKey": "-----BEGIN ENCRYPTED PRIVATE KEY-----
MIIC3TBXBgkqhkiG9w0BBQ0wSjApBgkqhkiG9w0BBQwwHAQILo+vYp1sVzkCAggA
MAwGCCqGSIb3DQIJBQAwHQYJYIZIAWUDBAEqBBAH/kHULWxjfIfts06S+YgeBIIC
gDTn9aCl0ndo30oMZGxXPjulzWp5+GcdcyhmwS0BHN/xWxoE/hAZcNHMshIqRZkz
9Bt8Az9x8nn5EHBp9DjrK/iC8sftrHwqCZuyeG07kZnHGkScAndGPGixHDOPmGhR
PMTA6VdS/BPojLf4avdA++pwqe9jgKfU7EIHZzVQibFJfNt0R8kNlDd9hlc8efiM
UfRbD+KgX0fRISoFxPWHBS7RCg/RczC2RQ7WtAUviD7sc9OzK0x8oUmr6gf/NDYD
pTYU4LUzFHc2FrXN5N0/w/1l7nzCTCuSo2w/2tx5eB6vD/oA6r+7KMzhG94aCeIJ
Rw6g1Be1Bgdqy8ijq1JMp3Tb7rkfRPf64OPHiUcXYi7A2G3EaofYgj8geaXNiDSf
t6kRPI5as27N8n1oOXb+8++kDuYU+T7lnBu3eprx+J0UMXKKdGWMfppOuCELaZEK
cO9JOcZQdXNWmFpmiSeGSsREAeNQp+wM8gkN6fJSlxCR4zjEP7z6dwl8sInEdTks
w6HoCmSgFohkcAmfLjPnNWGXEdkaAx0fnXia1V1OCccnHR+r/FnuKmkFjj8oPNmL
k86Y+YwTwzOAX56qRoiDevBqWScEy0GedYLAkjv5KwM+pajVjFEliXZ+BmMOGMgx
YuTg02HZfsAy90YuyWaBdxLLRcXcH4CIqbd83OVx+ostDFHN7wrfczgo5tDFiAp4
iBpuohVw7dDqxgzJ875v62ErYzTN00UddRFyy7L11duo3kmrbXzmeQ8qQ1J3RZxQ
B+S+46BStdGJfc8tDX7G4yhH6GUracFD9a6Uk4r4shj0emlU44NZR9V90xejwq2A
g3oTzDTCesmOzSew3oD8who=
-----END ENCRYPTED PRIVATE KEY-----
",
      "publicKey": "-----BEGIN RSA PUBLIC KEY-----
MIGJAoGBAMpaNgFfgnUINKdxyxjlZs3L0GBjcW7qqwtzBAAMgdJWcEo7Z8flDNGy
rvl8GarL3tkwoBcpUyi1/awyHpHeRMSLgKOnwMeMenK99TzeU4UWPX9ZXIQ4KxWE
tWWfrWyCckHTDgGD/gvpM5ygkHbhru8nu0pMZNI1N5GW5bMgmX1tAgMBAAE=
-----END RSA PUBLIC KEY-----
",
      "revision": 0,
      "type": "RSA",
      "updated": 2021-01-01T09:00:00.000Z,
      "version": 0,
    },
  ],
}
`;

exports[`createTestKeystore should use default signing key 1`] = `
{
  "algorithms": [
    "ES512",
  ],
  "created": 2020-01-01T08:00:00.000Z,
  "expiresAt": 2029-01-01T08:00:00.000Z,
  "id": "7531da89-12e9-403e-925a-5da49100635c",
  "isExternal": false,
  "namedCurve": "P-521",
  "notBefore": 2020-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "originUri": "https://example.com",
  "ownerId": "783f4859-562e-41e5-9c81-a392c12344c0",
  "passphrase": null,
  "preferredAlgorithm": "ES512",
  "privateKey": "-----BEGIN PRIVATE KEY-----
MIHuAgEAMBAGByqGSM49AgEGBSuBBAAjBIHWMIHTAgEBBEIBGma7xGZpaAngFXf3
mJF3IxZfDpI+6wU564K+eehxX104v6dZetjSfMx0rvsYX/s6cO2P3GE7R95VxWEk
+f4EX0qhgYkDgYYABAB8cBfDwCi41G4kVW4V3Y86nIMMCypYzfO8gYjpS091lxkM
goTRS3LM1p65KQfwBolrWIdVrbbOILASf06fQsHw5gEt4snVuMBO+LS6pesX9vA8
QT1LjX75Xq2InnLY1VToeNmxkuM+oDZgqHOYwzfUhu+zZaA5AuEkqPi47TA9iCSY
VQ==
-----END PRIVATE KEY-----
",
  "publicKey": "-----BEGIN PUBLIC KEY-----
MIGbMBAGByqGSM49AgEGBSuBBAAjA4GGAAQAfHAXw8AouNRuJFVuFd2POpyDDAsq
WM3zvIGI6UtPdZcZDIKE0UtyzNaeuSkH8AaJa1iHVa22ziCwEn9On0LB8OYBLeLJ
1bjATvi0uqXrF/bwPEE9S41++V6tiJ5y2NVU6HjZsZLjPqA2YKhzmMM31Ibvs2Wg
OQLhJKj4uO0wPYgkmFU=
-----END PUBLIC KEY-----
",
  "revision": 0,
  "type": "EC",
  "updated": 2021-01-01T10:00:00.000Z,
  "version": 0,
}
`;
